2006-02-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/despeckle.c (despeckle_median): fixed incorrect
	loop boundaries. Should fix bug #331044.

2006-02-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icoload.c
	* plug-ins/winicon/icosave.c: applied patches from Felix Pahl.
	Fixes incorrect bit shifts that caused scrambled transparency
	(bug #330692).

2006-02-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/sparkle.c: renamed parameter from opacity to
	transparency, since that's how it is being used (bug #331086,
	spotted by Joao).

	* plug-ins/common/gauss.c (gauss): apply multiply_alpha() on the
	source buffer, not the destination (bug #331051, spotted by
	Stephane Chauveau).

2006-02-13  Sven Neumann  <sven@gimp.org>

	* app/config/gimpguiconfig.c: make the internal help browser the
	default for all platforms (bug #329888).

2006-02-13  Sven Neumann  <sven@gimp.org>

	* configure.in: output a nicer and more complete summary.

2006-02-12  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimplayer.c: remove extra semicolon; fix for
	bug #330882 from Jens Granseuer.

2006-02-09  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.3.8.

2006-02-08  Sven Neumann  <sven@gimp.org>

	* Made 2.3.7 development release.

2006-02-08  Roman Joost	<romanofski@gimp.org>

	* data/images/gimp-splash.png: splash screen for a new release

2006-02-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu.c: register menu branches for the
	web-browser script.

	* plug-ins/script-fu/scripts/web-browser.scm: string review.

2006-02-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpimagemaptool.c: use canonical property names.

2006-02-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/raw.c
	* plug-ins/gfig/gfig-dialog.c 
	* plug-ins/helpbrowser/dialog.c
	* plug-ins/imagemap/imap_browse.c
	* plug-ins/print/gimp_main_window.c: use canonical signal names.

2006-02-07  Sven Neumann  <sven@gimp.org>
