@@ -95,7 +95,7 @@ gimp_crop_tool_register (GimpToolRegisterCallback  callback,
                 "gimp-crop-tool",
                 _("Crop & Resize"),
                 _("Crop or Resize an image"),
-                N_("_Crop & Resize"), NULL,
+                N_("_Crop & Resize"), "<shift>C",
                 NULL, GIMP_HELP_TOOL_CROP,
                 GIMP_STOCK_TOOL_CROP,
                 data);
