@@ -116,7 +116,7 @@ gimp_measure_tool_register (GimpToolRegisterCallback  callback,
                 "gimp-measure-tool",
                 _("Measure"),
                 _("Measure distances and angles"),
-                N_("_Measure"), NULL,
+                N_("_Measure"), "<shift>M",
                 NULL, GIMP_HELP_TOOL_MEASURE,
                 GIMP_STOCK_TOOL_MEASURE,
                 data);
